# qoropa

./: .gitignore  qoropa.cabal
conf/: ColorTest.hs
src/: Main.hs  Qoropa.hs
src/Qoropa/: Buffer.hs  Buffer.hs-boot  Config.hs  Config.hs-boot  Lock.hs  Notmuch.hs  Search.hs  Search.hs-boot  UI.hs  UI.hs-boot  Util.hs
src/Qoropa/Buffer/: Folder.hs  Log.hs  Search.hs  Search.hs-boot
src/Qoropa/Widget/: List.hs
