name:                qoropa
version:             0.1
synopsis:            Notmuch mail reader
homepage:            http://github.com/alip/qoropa
license:             GPL-2
license-file:        LICENSE
author:              Ali Polatel
maintainer:          alip@exherbo.org
category:            Email
build-type:          Simple
cabal-version:       >=1.2
data-files:          README.mkd
extra-source-files:  conf/ColorTest.hs

library
        hs-source-dirs: src

        exposed-modules:
                Qoropa.Widget.List
                Qoropa.Buffer.Folder
                Qoropa.Buffer.Log
                Qoropa.Buffer.Search
                Qoropa.Buffer
                Qoropa.UI
                Qoropa.Notmuch
                Qoropa.Lock
                Qoropa.Util
                Qoropa.Config
                Qoropa

        ghc-options: -Wall

        build-depends:  containers, directory, filepath, old-locale, process, time, unix
        build-depends:  base >=3 && < 5
        build-depends:  mtl >=1.1 && < 1.2
        build-depends:  MissingH >=1.0.0
        build-depends:  hslogger >= 1.0.7
        build-depends:  notmuch >=0.1
        build-depends:  utf8-string >= 0.3 && < 0.4
        build-depends:  vty >=4.0.0 && < 5

executable qoropa
        hs-source-dirs: src
        main-is:        Main.hs

        ghc-options: -Wall

        other-modules:
                Qoropa.Widget.List
                Qoropa.Buffer.Folder
                Qoropa.Buffer.Log
                Qoropa.Buffer.Search
                Qoropa.Buffer
                Qoropa.UI
                Qoropa.Notmuch
                Qoropa.Lock
                Qoropa.Util
                Qoropa.Config
                Qoropa

